# playground_rs

./: Cargo.toml  README.md
datasets/: ipc_caba_base2021.csv
examples/algos_and_ds/: README.md
examples/algos_and_ds/src/: main.rs
examples/algos_and_ds/src/algos/: example_algo.rs  mod.rs
examples/axum_example/: Cargo.toml
examples/axum_example/src/: main.rs
examples/clap_example/: Cargo.toml
examples/polars_example/: Cargo.toml
examples/polars_example/src/: main.rs
examples/ratatui_test/: Cargo.toml
examples/shaders_introduction/: Cargo.toml  README.md
examples/shaders_introduction/src/: main.rs
examples/svd_decomposition/: Cargo.toml
examples/tcp_server/src/: main.rs
projects/algos_and_ds/: Cargo.toml
projects/algos_and_ds/src/: main.rs
projects/algos_and_ds/src/algos/: example_algo.rs  mod.rs  rpn_interpreter.rs
projects/clap_example/src/: main.rs
projects/kvm_handson/: Cargo.toml  README.md  build.rs
projects/kvm_handson/src/: main.rs
projects/ratatui_test/src/: main.rs
projects/reqwest/: Cargo.toml
projects/reqwest/src/: main.rs
projects/svd_decomposition/src/: main.rs
projects/tokio_handson/: Cargo.toml
projects/tokio_handson/src/: api.rs  main.rs  tester.rs
projects/too_many_linked_lists/: README.md
projects/too_many_linked_lists/src/: fifth.rs  first.rs  fourth.rs  lib.rs  second.rs  third.rs
projects/web_server/: 404.html  hello.html
projects/web_server/src/: lib.rs  main.rs
