[package]
name = "tokio_handson"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.8.5"
